'Evened out' the number of underscores so VIM won't render everything in italics

--- a/site/_content/posts/concerts/2000-09-27_Camel.md
+++ b/site/_content/posts/concerts/2000-09-27_Camel.md
@@ -2,9 +2,9 @@
 title: Camel
 tags: [ "Camel" ]
 category: "013, Tilburg"
-picasa_userid: 110660365905793904078
-picasa_albumid: 5837788169988681185
-picasa_authkey: Gv1sRgCLO60rCLy-f8GA
+picasa_user_id: 110660365905793904078
+picasa_album_id: 5837788169988681185
+picasa_auth_key: Gv1sRgCLO60rCLy-f8GA
 ---
 Setlist
 -------
