--- a/site/_content/posts/concerts/2001-04-29_Kayak.md
+++ b/site/_content/posts/concerts/2001-04-29_Kayak.md
@@ -2,9 +2,9 @@
 title: Kayak
 tags: [ "Kayak" ]
 category: "Heuvelplein, Tilburg"
-picasa_userid: 110660365905793904078
-picasa_albumid: 5837790598320027329
-picasa_authkey: Gv1sRgCPSZuZuY3tmwhwE
+picasa_user_id: 110660365905793904078
+picasa_album_id: 5837790598320027329
+picasa_auth_key: Gv1sRgCPSZuZuY3tmwhwE
 ---
 Setlist
 -------
