--- a/site/_content/posts/concerts/2005-11-13_Fish.md
+++ b/site/_content/posts/concerts/2005-11-13_Fish.md
@@ -2,9 +2,9 @@
 title: Fish
 tags: [ "Fish" ]
 category: "013, Tilburg"
-picasa_userid: 110660365905793904078
-picasa_albumid: 5837789352993801505
-picasa_authkey: Gv1sRgCOazq_fo7NeZcg
+picasa_user_id: 110660365905793904078
+picasa_album_id: 5837789352993801505
+picasa_auth_key: Gv1sRgCOazq_fo7NeZcg
 ---
 Setlist
 -------
