--- a/site/_content/posts/concerts/2007-07-01_Genesis.md
+++ b/site/_content/posts/concerts/2007-07-01_Genesis.md
@@ -2,9 +2,9 @@
 title: Genesis
 tags: [ "Genesis" ]
 category: "ArenA, Amsterdam"
-picasa_userid: 110660365905793904078
-picasa_albumid: 5760179593768220001
-picasa_authkey: Gv1sRgCKOmjfTmhuiJWA
+picasa_user_id: 110660365905793904078
+picasa_album_id: 5760179593768220001
+picasa_auth_key: Gv1sRgCKOmjfTmhuiJWA
 ---
 Setlist
 -------
