--- a/site/_content/posts/concerts/2012-04-27_NoSound.md
+++ b/site/_content/posts/concerts/2012-04-27_NoSound.md
@@ -2,9 +2,9 @@
 title: NoSound
 tags: [ "A Liquid Landscape", "NoSound" ]
 category: "Lakei, Helmond"
-picasa_userid: 110660365905793904078
-picasa_albumid: 5765108481247859169
-picasa_authkey: Gv1sRgCL_v-Z6858LzWw
+picasa_user_id: 110660365905793904078
+picasa_album_id: 5765108481247859169
+picasa_auth_key: Gv1sRgCL_v-Z6858LzWw
 ---
 Support band
 ------------
