--- a/site/_content/posts/concerts/2004-10-16_IQ.md
+++ b/site/_content/posts/concerts/2004-10-16_IQ.md
@@ -2,9 +2,9 @@
 title: IQ
 tags: [ "IQ" ]
 category: "013, Tilburg"
-picasa_userid: 110660365905793904078
-picasa_albumid: 5837790317512244273
-picasa_authkey: Gv1sRgCNScuI3Viq-anAE
+picasa_user_id: 110660365905793904078
+picasa_album_id: 5837790317512244273
+picasa_auth_key: Gv1sRgCNScuI3Viq-anAE
 ---
 Setlist
 -------
