Added Support band section to The Who

--- a/site/_content/posts/concerts/2013-07-05_The-Who.md
+++ b/site/_content/posts/concerts/2013-07-05_The-Who.md
@@ -6,6 +6,10 @@ picasa_user_id: 110660365905793904078
 picasa_album_id: 5898974054727835905
 picasa_auth_key: CNyOnqeM-6_k9wE
 ---
+Support band
+------------
+Vintage Trouble
+
 Setlist Vintage Trouble
 -----------------------
 * High Times (They Are Coming)
