--- a/site/_content/posts/concerts/2014-05-22_Yes.md
+++ b/site/_content/posts/concerts/2014-05-22_Yes.md
@@ -2,6 +2,9 @@
 title: Yes
 tags: [ "Yes" ]
 category: "013, Tilburg"
+picasa_user_id: 110660365905793904078
+picasa_album_id: 6027361090288863873
+picasa_auth_key: CJ6V_8fQsNDUPA
 ---
 Setlist
 -------
