--- a/site/_content/posts/concerts/2013-07-05_The-Who.md
+++ b/site/_content/posts/concerts/2013-07-05_The-Who.md
@@ -1,7 +1,7 @@
 ---
 title: The Who
 tags: [ "The Who", "Roger Daltrey", "Pete Townshend", "Vintage Trouble" ]
-category: "Ziggodome, Amsterdam"
+category: "Ziggo Dome, Amsterdam"
 picasa_user_id: 110660365905793904078
 picasa_album_id: 5898974054727835905
 picasa_auth_key: CNyOnqeM-6_k9wE
