Add Camel and Neal Morse

--- a/site/_content/posts/concerts/2013-10-26_Camel.md
+++ b/site/_content/posts/concerts/2013-10-26_Camel.md
@@ -29,7 +29,7 @@ _encore_
 
 Band members
 ------------
-* _guitar, vocals_: Andy Latimer
+* _guitar, vocals, flutes_: Andy Latimer
 * _bass, acoustic guitar, vocals_: Colin Bass
 * _keys_: Guy LeBlanc
 * _drums, bass_: Denis Clement
