--- a/site/_content/posts/concerts/2005-11-13_Fish.md
+++ b/site/_content/posts/concerts/2005-11-13_Fish.md
@@ -32,7 +32,7 @@ Band members
 * _vocals_: Fish
 * _guitar_: Frank Usher
 * _more guitar_: Andy Trill
-* _keys_: Tony Turell
+* _keys_: Tony Turrell
 * _bass_: Steve Vantsis
 * _drums_: John Tonks
 * _backup vocals_: Deborah Ffrench
